fix: colorWeak overflow #694

--- a/src/components/global.less
+++ b/src/components/global.less
@@ -2,6 +2,12 @@
 
 body {
 
+
+}
+
+#app {
+  height: 100%;
+
   &.colorWeak {
     filter: invert(80%);
   }
